# ChangeLog for dev-php5/ZendFramework
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.59 2009/09/21 17:18:45 patrick Exp $

*ZendFramework-1.9.2-r1 (21 Sep 2009)

  21 Sep 2009; Patrick Lauer <patrick@gentoo.org>
  +ZendFramework-1.9.2-r1.ebuild:
  Migrating to EAPI2 and usedeps to make users really happy. Fixes #285838

*ZendFramework-1.9.2 (19 Sep 2009)

  19 Sep 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.7.6.ebuild, -ZendFramework-1.7.7.ebuild,
  +ZendFramework-1.9.2.ebuild:
  Bumping to 1.9.2 and removing unstable old 1.7.x versions

  19 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.8.3.ebuild:
  Broken documentation when using both minimal and doc useflags, 
  fixing bug 277064

  19 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.8.3.ebuild:
  Adding requirement for tokenize when using cli, fixing bug 278278

  18 Jul 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  ZendFramework-1.8.3.ebuild:
  Require PHP to be built with simplexml when cli is used, fixing bug 
  276488

*ZendFramework-1.8.3 (12 Jun 2009)

  12 Jun 2009; Tobias Scherbaum <dertobi123@gentoo.org>
  +ZendFramework-1.8.3.ebuild:
  Version bump, #270880

*ZendFramework-1.7.7 (29 Mar 2009)

  29 Mar 2009; Peter Volkov <pva@gentoo.org> +ZendFramework-1.7.7.ebuild:
  Version bump.

*ZendFramework-1.7.6 (07 Mar 2009)

  07 Mar 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
  -ZendFramework-1.7.2.ebuild, ZendFramework-1.7.5.ebuild,
  +ZendFramework-1.7.6.ebuild:
  Bumping to 1.7.6, removing old version and fixing typo

  25 Feb 2009; Markus Meier <maekke@gentoo.org> ZendFramework-1.7.5.ebuild:
  amd64 stable, bug #259512

  22 Feb 2009; Raúl Porcel <armin76@gentoo.org> ZendFramework-1.7.5.ebuild:
  x86 stable wrt #259512

  21 Feb 2009; Jeroen Roovers <jer@gentoo.org> ZendFramework-1.7.5.ebuild: