@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST ZendFramework-1.7.5-apidoc.tar.gz 4907260 RMD160 684773c9314361495c079a005b85b10468d6617c SHA1 bac648a9caa05d0afad1fb8bf14ff0a1c26f320f SHA256 10bb3ec7d3057baa9d9f20e82304bb72fd63b750771d00c9c112490dd9841624
 DIST ZendFramework-1.7.5-manual-en.tar.gz 1194554 RMD160 2354f57a18e6803f75a0fb2f3e48380cd664e480 SHA1 a10455cca14bad3848019369cdcf5d1db0ee1dc7 SHA256 2fab39b3b5e30c66d44e9ec5e4b88fef48a627fb2259aad58d555a3cdeabbb73
 DIST ZendFramework-1.7.5-minimal.tar.gz 2578136 RMD160 0d0371a7fdb1ce84390ec54b0f2f5478305261df SHA1 118f511b039a9f2cac2d68064392de3af544f4a8 SHA256 d74455ac522bc1e15a206b95c4571e2c3b41a4a33c2020a9252fab5fbdcb8a8b
@@ -10,9 +13,21 @@ DIST ZendFramework-1.9.2-apidoc.tar.gz 6218188 RMD160 17d23bb9f4c310e5f6bc3c3d2f
 DIST ZendFramework-1.9.2-manual-en.tar.gz 1680826 RMD160 d8ba74d6261c817e11c7a556ff09148b01fe52fd SHA1 c65d96fb133489f53041ca4b793c2f8c73f9f37d SHA256 cc307bd7579527260b51ab9b2e106514638d38b706bdd6bbd6333b469b25af24
 DIST ZendFramework-1.9.2-minimal.tar.gz 3328030 RMD160 b79fc7ccf5722fa6848b7ce7e81a5207154d179c SHA1 6ec460b59943b46d961f28599dcb75bfc16811b1 SHA256 a84d4475b32e72f8150f8802fe9eb86e162ed20330883ca19c8ba467f39d8df6
 DIST ZendFramework-1.9.2.tar.gz 40746830 RMD160 42a03dd0d810c382d96a1bcf5d0c74f7b7663d1d SHA1 f67f9c95612bb4427add9156a8369a8f4bb9f33a SHA256 9dfad7be1c332083e14f983a115562419f4d32abe9dde63dfe1006fc4ae785b2
+DIST ZendFramework-1.9.6-apidoc.tar.gz 8886643 RMD160 5be2eb79562815b378871be9d5c0c1a0475de408 SHA1 19d90f4928163f64bcbe8f147d08dc4c2851ef7c SHA256 bedf926b37e1b3d95532d9487a908a08c107b33d895f87e7fd910aeae3a9e567
+DIST ZendFramework-1.9.6-manual-en.tar.gz 1664316 RMD160 d5d166352d32ad4049b1e80eda815e320d1293e6 SHA1 c7adebee6dd335fe49b85e9a1032fc24bb251e8f SHA256 2c3b6d21a88600e4391c7978e5924210bb1a5f39509ee159092dda5972a9cdaa
+DIST ZendFramework-1.9.6-minimal.tar.gz 3337211 RMD160 73b354ee2cc5a0fe395af2472ecf55bfbc1fa08e SHA1 420ec582957278c7dcc2194bea5ceb43eb6f918f SHA256 dac8aeab143d6c3df543bb45191d97e104fcc445554383a16edcc421aca6728b
+DIST ZendFramework-1.9.6.tar.gz 40626830 RMD160 8d03e2663fba37f7b259abca6979bdbc08b97794 SHA1 1fe84c0f050501f1d89393789fb3b3a78bf9b5e3 SHA256 2667b4ee70c97ab8efd9325ad41cbbaf965161577b9e8f725358fd59d977ba53
 EBUILD ZendFramework-1.7.5.ebuild 1726 RMD160 5ec1f69bcae5b12503d047df33170b8d7713acc5 SHA1 1ca00eae5995e511622435df837453756bd875f2 SHA256 022843e1c3ea0f3e6fd1033eaf72e333331a18fa610b7a9cff998e01a27d5a5f
 EBUILD ZendFramework-1.8.3.ebuild 2002 RMD160 abbccc32a98b0723f8e20242acaa33657ed50158 SHA1 1ce282b960fdf11c79c9c3e5464dee9557aa1811 SHA256 e026e2e54231967b820f8144550d9fd76e8ad46922ef56ac86e3295e8ddbb276
 EBUILD ZendFramework-1.9.2-r1.ebuild 1955 RMD160 d1b304ea59be67d8b1585036392a1901273d4512 SHA1 f9cc0b54636db09da5fb979a06ec403bafd9d69a SHA256 0d00e17828620822f8191e8b2063e357a598685623f1de26573efd63494f3373
 EBUILD ZendFramework-1.9.2.ebuild 2002 RMD160 435dc4d65e74a517a61b5221a6e1c3aafc8f539a SHA1 85a67f27817bf70785646b743396c9e0f556dd78 SHA256 4ee6797f9ba210de3ec082d05f99fbf61600a399979d2caf15f7a8541a095343
-MISC ChangeLog 9511 RMD160 df9ad30d898f8567ceea6175857675faab9899d7 SHA1 a202f28c8ddc5506a3ad15e5e669fd4b36368de4 SHA256 eee895b48e3be9112a4c4b2b6163162f3925dc00c18555b116a49ae2215a1172
+EBUILD ZendFramework-1.9.6.ebuild 2037 RMD160 9a126f661266302ba6c77bc86a1a799a5a177f97 SHA1 847a5943ff0c7802d2de3d315e4ccbed9430dea5 SHA256 6f537ade7361ebc1d9a3a060a9eeaff84753b7caf642e4aee81c3e5d56fa3464
+MISC ChangeLog 9715 RMD160 79656bacbaf5ea56326a36364452a3a99e9a7cdf SHA1 bfd7a455e74807a9bef3c4efcfad28a1359d1d15 SHA256 2528705e2480addad0850e4cead83d03208acb03b720b584e4c6759a41d52678
 MISC metadata.xml 523 RMD160 129ba00df70b4e9d7ccb7b8dc828e9406f9e312d SHA1 f5e9925403974e649a44402617249bb9dcc34f92 SHA256 ea4383a6e685b9e68b44e3edf3494439ecaf4ac56e4bf1bc3cd5dd5c6427ccec
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.13 (GNU/Linux)
+
+iEYEARECAAYFAksmMSoACgkQsR7PQhRXYEmKywCdH978fyVAPg9Z/4KdJ5MRnQkN
+1nsAn3HixCGMCGhQG5IrT1KW09Q/p0XK
+=WiFr
+-----END PGP SIGNATURE-----
