@@ -1,6 +1,12 @@
 # ChangeLog for dev-php5/ZendFramework
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.59 2009/09/21 17:18:45 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php5/ZendFramework/Attic/ChangeLog,v 1.60 2009/12/14 12:35:44 gurligebis Exp $
+
+*ZendFramework-1.9.6 (14 Dec 2009)
+
+  14 Dec 2009; Bjarke Istrup Pedersen <gurligebis@gentoo.org>
+  +ZendFramework-1.9.6.ebuild:
+  Bumping to 1.9.6 and installing the dojo toolkit, fixing bug 270252.
 
 *ZendFramework-1.9.2-r1 (21 Sep 2009)
 
